feat: you can make folders now and also drag and drop files in there and made multiple things to make it look good