@@ -7,7 +7,9 @@ import org.miracloud.frontend.views.FileEntry;
 
 import java.io.File;
 import java.net.URI;
+import java.net.URLEncoder;
 import java.net.http.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -19,24 +21,36 @@ public class appController {
     private static final ObjectMapper mapper = new ObjectMapper();
 
     public List<FileEntry> listFiles() throws Exception {
-        HttpResponse<String> response = authorizedGet(BASE_URL);
+        return listFiles(null);
+    }
+
+    public List<FileEntry> listFiles(String subPath) throws Exception {
+        String url = BASE_URL;
+        if (subPath != null && !subPath.isBlank())
+            url += "?path=" + URLEncoder.encode(subPath, StandardCharsets.UTF_8);
+
+        HttpResponse<String> response = authorizedGet(url);
         if (response.statusCode() == 401 && loginController.tryAutoLogin())
-            return listFiles();
+            return listFiles(subPath);
         if (response.statusCode() != 200)
             throw new Exception("Failed to load files");
 
         JsonNode root = mapper.readTree(response.body());
         List<FileEntry> entries = new ArrayList<>();
         for (JsonNode node : root) {
-            String name = node.has("name") ? node.get("name").asText() : node.asText();
-            long size = node.has("sizeBytes") ? node.get("sizeBytes").asLong() : 0L;
-            String date = node.has("uploadedAt") ? node.get("uploadedAt").asText() : "—";
+            String name     = node.has("name")       ? node.get("name").asText()       : node.asText();
+            long size        = node.has("sizeBytes")  ? node.get("sizeBytes").asLong()  : 0L;
+            String date      = node.has("uploadedAt") ? node.get("uploadedAt").asText() : "—";
             entries.add(new FileEntry(name, size, date));
         }
         return entries;
     }
 
     public void uploadFile(Path filePath) throws Exception {
+        uploadFile(filePath, null);
+    }
+
+    public void uploadFile(Path filePath, String subPath) throws Exception {
         String boundary = "----MiraCloudBoundary" + System.currentTimeMillis();
         byte[] fileBytes = Files.readAllBytes(filePath);
         String fileName = filePath.getFileName().toString();
@@ -45,16 +59,20 @@ public class appController {
                 "Content-Disposition: form-data; name=\"file\"; filename=\"" + fileName + "\"\r\n" +
                 "Content-Type: application/octet-stream\r\n\r\n";
 
-        byte[] prefix = multipartHeader.getBytes();
-        byte[] suffix = ("\r\n--" + boundary + "--\r\n").getBytes();
+        byte[] prefix  = multipartHeader.getBytes();
+        byte[] suffix  = ("\r\n--" + boundary + "--\r\n").getBytes();
         byte[] fullBody = new byte[prefix.length + fileBytes.length + suffix.length];
-        System.arraycopy(prefix, 0, fullBody, 0, prefix.length);
-        System.arraycopy(fileBytes, 0, fullBody, prefix.length, fileBytes.length);
-        System.arraycopy(suffix, 0, fullBody, prefix.length + fileBytes.length, suffix.length);
+        System.arraycopy(prefix,    0, fullBody, 0,                                prefix.length);
+        System.arraycopy(fileBytes, 0, fullBody, prefix.length,                    fileBytes.length);
+        System.arraycopy(suffix,    0, fullBody, prefix.length + fileBytes.length, suffix.length);
+
+        String url = BASE_URL + "/upload";
+        if (subPath != null && !subPath.isBlank())
+            url += "?path=" + URLEncoder.encode(subPath, StandardCharsets.UTF_8);
 
         HttpClient client = HttpClient.newHttpClient();
         HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/upload"))
+                .uri(URI.create(url))
                 .header("Authorization", "Bearer " + AppState.getAccessToken())
                 .header("Content-Type", "multipart/form-data; boundary=" + boundary)
                 .POST(HttpRequest.BodyPublishers.ofByteArray(fullBody))
@@ -66,7 +84,7 @@ public class appController {
     }
 
     public void deleteFile(String filename) throws Exception {
-        String encoded = java.net.URLEncoder.encode(filename, "UTF-8").replace("+", "%20");
+        String encoded = URLEncoder.encode(filename, StandardCharsets.UTF_8).replace("+", "%20");
         HttpClient client = HttpClient.newHttpClient();
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(BASE_URL + "/" + encoded))
@@ -80,7 +98,7 @@ public class appController {
     }
 
     public void renameFile(String oldName, String newName) throws Exception {
-        String encoded = java.net.URLEncoder.encode(oldName, "UTF-8").replace("+", "%20");
+        String encoded = URLEncoder.encode(oldName, StandardCharsets.UTF_8).replace("+", "%20");
         String json = String.format("{\"newName\":\"%s\"}", newName);
         HttpClient client = HttpClient.newHttpClient();
         HttpRequest request = HttpRequest.newBuilder()
@@ -95,8 +113,39 @@ public class appController {
             throw new Exception("Rename failed: " + response.body());
     }
 
+    public void moveFile(String filename, String targetFolder) throws Exception {
+        String encoded = URLEncoder.encode(filename, StandardCharsets.UTF_8).replace("+", "%20");
+        String json = String.format("{\"targetFolder\":\"%s\"}", targetFolder);
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(BASE_URL + "/" + encoded + "/move"))
+                .header("Authorization", "Bearer " + AppState.getAccessToken())
+                .header("Content-Type", "application/json")
+                .PUT(HttpRequest.BodyPublishers.ofString(json))
+                .build();
+
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        if (response.statusCode() != 200)
+            throw new Exception("Move failed: " + response.body());
+    }
+
+    public void createFolder(String folderName) throws Exception {
+        String json = String.format("{\"name\":\"%s\"}", folderName);
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(BASE_URL + "/folder"))
+                .header("Authorization", "Bearer " + AppState.getAccessToken())
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(json))
+                .build();
+
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        if (response.statusCode() != 200)
+            throw new Exception("Folder creation failed: " + response.body());
+    }
+
     public File downloadToTemp(String filename) throws Exception {
-        String encoded = java.net.URLEncoder.encode(filename, "UTF-8").replace("+", "%20");
+        String encoded = URLEncoder.encode(filename, StandardCharsets.UTF_8).replace("+", "%20");
         HttpResponse<byte[]> response = authorizedGetBytes(BASE_URL + "/download/" + encoded);
         if (response.statusCode() != 200)
             throw new Exception("Download failed: " + response.statusCode());
